# slonik

./: .env  .gitignore  Cargo.toml  README.md
resources/: pgsql.lang  window.gtk4.ui  window.ui  window.ui~
src/: components.rs  debug_logger.rs  emit.rs  event.rs  main.rs  model.rs  pg_session.rs  widgets.rs  worker.rs
src/components/: main_window.rs  navigator.rs  text_view.rs
src/components/navigator/: model.rs
src/model/: pg_response.rs
src/widgets/: editor.rs  main_window.rs  messages.rs  output.rs
src/widgets/output/: csv.rs  output_mode.rs  tabular.rs  tabular_raw.rs  textutils.rs  widget.rs
