[package]
name = "slonik"
version = "0.1.0"
authors = ["Marcin Pajkowski <marcin.pajkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk-rs.git", branch = "master" }
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.15"
anyhow = "1.0.40"
env_logger = "0.8.3"
log = "0.4.14"
dotenv = "0.15.0"
url = "2.2.2"
tokio-postgres = "0.7.2"
reqwest = "0.11.3"
