[package]
name = "slonik"
version = "0.1.0"
authors = ["Marcin Pajkowski <marcin.pajkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.2", features = ["v3_24"] }
glib = ""
gdk = ""
gio = ""
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.15"
anyhow = "1.0.40"
env_logger = "0.8.3"
log = "0.4.14"
dotenv = "0.15.0"
#tokio-postgres = "0.7.2"
tokio-postgres = { git = "https://github.com/mpajkowski/rust-postgres", branch = "650/simple-query-row-getter" }
async-trait = "0.1.50"
sourceview = "0.9.0"
prettytable-rs = "0.8.0"
csv = ""
cascade = "1.0.0"
itertools = "0.10.0"
