[package]
name = "slonik"
version = "0.1.0"
authors = ["Marcin Pajkowski <marcin.pajkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.16"
anyhow = "1.0.42"
env_logger = "0.9.0"
log = "0.4.14"
dotenv = "0.15.0"
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres.git", branch = "master" }
async-trait = "0.1.51"
prettytable-rs = "0.8.0"
cascade = "1.0.0"
itertools = "0.10.1"
mimalloc = { version = "0.1.26", default-features = false }
rayon = "1.5.1"
gtk4 = "0.2.0"
gdk4 = "0.2.0"
glib = "0.14.2"
sourceview5 = "0.2.0"
csv = "1.1.6"
